letter spacing issue fixed

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -282,8 +282,11 @@
   .top-\[-175px\] {
     top: -175px;
   }
-  .top-\[21px\] {
-    top: 21px;
+  .top-\[35px\] {
+    top: 35px;
+  }
+  .top-\[108px\] {
+    top: 108px;
   }
   .top-px {
     top: 1px;
@@ -300,8 +303,8 @@
   .bottom-10 {
     bottom: var(--spacing-10);
   }
-  .bottom-\[21px\] {
-    bottom: 21px;
+  .bottom-\[19px\] {
+    bottom: 19px;
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
@@ -432,6 +435,9 @@
   .mt-auto {
     margin-top: auto;
   }
+  .-mb-px {
+    margin-bottom: -1px;
+  }
   .mb-0 {
     margin-bottom: calc(var(--spacing) * 0);
   }
@@ -527,6 +533,9 @@
   }
   .h-\[70px\] {
     height: 70px;
+  }
+  .h-\[102\%\] {
+    height: 102%;
   }
   .h-\[120px\] {
     height: 120px;
@@ -686,6 +695,12 @@
   }
   .flex-1\/3 {
     flex: calc(1/3 * 100%);
+  }
+  .flex-\[2\] {
+    flex: 2;
+  }
+  .flex-\[3\] {
+    flex: 3;
   }
   .shrink-0 {
     flex-shrink: 0;
@@ -1325,14 +1340,6 @@
   .tracking-\[-0\.05em\] {
     --tw-tracking: -0.05em;
     letter-spacing: -0.05em;
-  }
-  .tracking-\[-2\%\] {
-    --tw-tracking: -2%;
-    letter-spacing: -2%;
-  }
-  .tracking-\[-5\%\] {
-    --tw-tracking: -5%;
-    letter-spacing: -5%;
   }
   .tracking-\[0\%\] {
     --tw-tracking: 0%;
